[project]
name = "dqn-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cloudpickle==3.1.1",
    "contourpy==1.3.2",
    "curl-cffi==0.11.4",
    "cycler==0.12.1",
    "farama-notifications==0.0.4",
    "filelock==3.18.0",
    "fonttools==4.58.5",
    "frozendict==2.4.6",
    "fsspec==2025.5.1",
    "gymnasium==1.2.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mpmath==1.3.0",
    "multitasking==0.0.11",
    "networkx==3.5",
    "numpy==2.3.1",
    "packaging==25.0",
    "pandas==2.3.0",
    "peewee==3.18.1",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "protobuf==6.31.1",
    "pycparser==2.22",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.4",
    "six==1.17.0",
    "soupsieve==2.7",
    "sympy==1.14.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "yfinance==0.2.65",
]
